[gd_scene load_steps=5 format=2]

[ext_resource path="res://stage.gd" type="Script" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://background.gd" type="Script" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]

[node name="stage" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="spawn_timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="player" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 79.6105, 89.5618 )

[node name="ui" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="score" type="Label" parent="ui" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 6.0
margin_right = 61.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.435294, 1, 0.733333, 1 )
custom_colors/font_color_shadow = Color( 0.184314, 0.121569, 0.278431, 1 )
text = "Score: 0."
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="retry" type="Label" parent="ui" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_top = 65.0
margin_right = 269.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.435294, 1, 0.733333, 1 )
custom_colors/font_color_shadow = Color( 0.184314, 0.121569, 0.278431, 1 )
text = "Game Over.

-press the enter key to retry-"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]

[connection signal="destroyed" from="player" to="." method="_on_player_destroyed"]


